manifests/deployment-backend.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: back-end-deployment
  labels:
    app: back-end

spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-end
  template:
    metadata:
      labels:
        app: back-end
    spec:
      containers:
        - name: back-end
          image: "uploader-backend:0.0.1"
          ports:
            - containerPort: 5001
