manifests/deployment-frontend.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: front-end-deployment
  labels:
    app: front-end

spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
        - name: front-end
          image: "uploader-frontend:0.0.1"
          ports:
            - containerPort: 80
