manifests/deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: flask-deployment
  labels:
    app: flask

spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flaskapp
          image: "flask_app:0.0.1"
          ports:
            - containerPort: 5000
