manifests/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: uploader-service
spec:
  selector:
    app: front-end
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
