manifests/ingress-uploader.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - host: ""                 # empty host matches all hosts, optional
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: uploader-backend-service
                port:
                  number: 5001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uploader-service
                port:
                  number: 80
